<resources>
    <string name="app_name">ErrorHandling</string>
    <string name="personal_details">Personal Details</string>
    <string name="home_message">Welcome %1$s, Your last login was at %2%s attempted from %3$s.</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="age_text">Age: %1$d</string>
    <string name="gender_text">Gender: %1$s</string>
    <string name="address_text">Address: %1$s</string>
    <string name="bloodgroup_text">Bloodgroup: %1$s</string>
    <string name="height_text">Height: %1$d</string>
    <string name="weight_text">Weight: %1$f</string>
    <string name="welcome_title">Welcome</string>
</resources>
