<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/age_text"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_below="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/gender_text"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_below="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/address_text"/>

    <TextView
        android:id="@+id/tv_bloodgroup"
        android:layout_below="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/bloodgroup_text"/>

    <TextView
        android:id="@+id/tv_height"
        android:layout_below="@+id/tv_bloodgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/height_text"/>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_below="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="@string/weight_text"/>

</RelativeLayout>
